--- a/teamstats/templates/teamstats/show_season.html
+++ b/teamstats/templates/teamstats/show_season.html
@@ -95,72 +95,77 @@
 
   {% if match_list %}
 <p>
-  <a href="{% url 'show_season_calendar' season.pk %}">Kalenteri (ICS/iCal)</a>
+    <a href="{% url 'show_season_calendar' season.pk %}">Kalenteri (ICS/iCal)</a>
 </p>
-    <table>
-      {% for match in match_list %}
-        <tr>
-	  <td class="center">
+<table>
+    {% for match in match_list %}
+    <tr>
+	      <td class="center">
             {{ match.date|date:"D"|lower }}
-          </td>
-	  <td class="right">
+        </td>
+	      <td class="right">
             {{ match.date|date:"j.n." }}
-          </td>
-	  <td class="left">
+        </td>
+	      <td class="left">
             {{ match.date|date:"G:i" }}
-          </td>
-          <td>
+        </td>
+        <td>
             {{ match.field }}
-          </td>
-	  <td class="center">
+        </td>
+	      <td class="center">
             <a href="{% url 'show_match' match.id %}">
-              {{ match.opponent }}
+                {{ match.opponent }}
             </a>
-          </td>
-	  {% if match.result %}
-	    <td class="right">
-              {{ match.goals }}
-            </td>
-	    <td>
-              -
-            </td>
-	    <td class="left">
-              {{ match.opponent_goals }}
-            </td>
-	  {% else %}
-	    <td></td>
-            <td></td>
-            <td></td>
-	  {% endif %}
-
-          {% if not match.result %}
-            <td class="registrations">
-            {% regroup match.player_list by choice as choice_list %}
-            {% for choice in choice_list %}
-              <span class="choice{{ choice.grouper }}">
-                {% if choice.grouper == 1 %}
-                  IN
+        </td>
+        {% if match.result %}
+	      <td class="right">
+            {{ match.goals }}
+        </td>
+	      <td>
+            -
+        </td>
+	      <td class="left">
+            {{ match.opponent_goals }}
+        </td>
+	      <td></td>
+        {% else %}
+	      <td></td>
+        <td></td>
+        <td></td>
+        <td class="registrations">
+            {% regroup match.enrolledplayer_set.all by enroll as enroll_list %}
+            {% for enroll in enroll_list %}
+            <span
+                {% if enroll.grouper == True %}
+                class="choice1">
+                IN
+                {% elif enroll.grouper == False %}
+                class="choice2">
+                OUT
                 {% endif %}
-                {% if choice.grouper == 2 %}
-                  OUT
-                {% endif %}
-                {% if choice.grouper == 3 %}
-                  ?
-                {% endif %}
-                ({{ choice.list|length }}):
-                {% for player in choice.list %}
-                  <a href="{% url 'show_player' player.player.id %}">
-                    {{ player.player.shortname }}
-                  </a>
+                ({{ enroll.list|length }}):
+                {% for player in enroll.list %}
+                <a href="{% url 'show_player' player.player.player.id %}">
+                    {{ player.player.player.shortname }}
+                </a>
                 {% endfor %}
-              </span>
+            </span>
             {% endfor %}
-            </td>
-          {% endif %}        
-
-      </tr>
+            {% if match.not_enrolled_players %}
+            <span class="choice3">
+                ? ({{ match.not_enrolled_players|length }}):
+                {% for player in match.not_enrolled_players %}
+                <a href="{% url 'show_player' player.player.id %}">
+                    {{ player.player.shortname }}
+                </a>
+                {% endfor %}
+            </span>
+            {% endif %}
+        </td>
+        {% endif %}
+    </tr>
     {% endfor %}
-  </table>
+</table>
 {% endif %}
 
 {% endblock %}
